[ADD] - Route /info for database connection
